@startuml UML

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

enum GameStatus <<enumeration>> {
  LOBBY
  PLAY
  WHITE_WON
  BLACK_WON
}

interface GameState <<interface>> {
  {field} + currentPlayerIndex: Number {abstract}
  {field} + isBouncingOnGoing: Boolean {abstract}
}
GameState o--> "1\n- board" Board : <<Owns>>
GameState o--> "2\n- players" Player : <<Owns>>
GameState *--> "1\n- status" GameStatus : <<Has>>

class Game<GameState> extends Observer {
  {method} + Game(board: Board, players: Player[2])
  {method} + getCurrentPlayer(): Player
  {method} + getPlayer(index: Number): Player
  {method} + setPlayerName(index: Number, name: String)
  {method} + setPlayerColor(index: Number, color: PieceColor)
  {method} + play()
  {method} + restart()
  {method} + skipBouncing()
  {method} + playMove(fromPosition: Position, toPosition: Position): Move
  {method} + getStatus(): GameStatus
  {method} - nextPlayer()
}
Game ..> GameState : <<Uses>>
Game ..> Position : <<Uses>>
Game ..> Move : <<Uses>>

interface PlayerState <<interface>> {
  {field} + name: String {abstract}
}
PlayerState o--> "1\n- color" PieceColor : <<Chooses>>
PlayerState *--> "*\n- capturedPieces" Piece : <<Captures>>

class Player<PlayerState> extends Observer {
  {method} + Player(name: String, color: PieceColor)
  {method} + setName(name: String)
  {method} + setColor(color: PieceColor)
  {method} + addCapturedPiece(piece: Piece)
  {method} + removeAllCapturedPieces()

  {method} + getName(): String
  {method} + getColor(): PieceColor
  {method} + getCapturedPieces(): Piece[*]
}
Player ..> PlayerState : <<Uses>>

enum PieceType <<enumeration>> {
  AYMON
  BAYARD
  CAROLO
  EGO
  HUBRIS
}

enum PieceColor <<enumeration>> {
  BLACK
  WHITE

  {method} + getOpposite(): PieceColor
}

abstract class Piece <<abstract>> {
  {field} - hasMoved: Boolean

  {method} + Piece(color: PieceColor)

  {method} + getDirection(color: PieceColor): Number {static}
  {method} + getDirection(): Number
  {method} + setHasMoved()
  {method} + getHasMoved(): Boolean
  {method} + getColor(): PieceColor
  {method} + canBeCapturedBy(piece: PieceType): Boolean
  {method} + canJumpOverPieces(): Boolean
  {method} + canMoveTeleportAnywhere(): Boolean
  {method} + shouldMoveUntilObstacle(): Boolean
  {method} + canBounce(): Boolean
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*] {abstract}
  {method} + getCapturablePiecesTypes(): PieceType[*] {abstract}
  {method} + getType(): PieceType {abstract}
}
Piece o--> "1\n- color" PieceColor : <<Has>>
Piece ..> Position : <<Uses>>
Piece ..> PieceType : <<Is>>

class Aymon extends Piece {
  {method} + Aymon(color: PieceColor)
  {method} + canMoveTeleportAnywhere(): Boolean
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*]
  {method} + getCapturablePiecesTypes(): PieceType[*]
  {method} + getType(): PieceType
}

class Bayard extends Piece {
  {method} + Bayard(color: PieceColor)
  {method} + canJumpOverPieces(): Boolean
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*]
  {method} + getCapturablePiecesTypes(): PieceType[*]
  {method} + getType(): PieceType
}

class Carolo extends Piece {
  {method} + Carolo(color: PieceColor)
  {method} + shouldMoveUntilObstacle(): Boolean
  {method} + canBounce(): Boolean
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*]
  {method} + getCapturablePiecesTypes(): PieceType[*]
  {method} + getType(): PieceType
}

class Ego extends Piece {
  {method} + Ego(color: PieceColor)
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*]
  {method} + getCapturablePiecesTypes(): PieceType[*]
  {method} + getType(): PieceType
}

class Hubris extends Piece {
  {method} + Hubris(color: PieceColor)
  {method} + getPositionsOffsets(maximumOffset: Number): Position[*]
  {method} + getCapturablePiecesTypes(): PieceType[*]
  {method} + getType(): PieceType
}

interface BoardBaseState <<interface>> {}
BoardBaseState *--> "64\n- board" PiecePosition : <<Owns>>
BoardBaseState o--> "*\n- moves" Move : <<Saves>>

abstract class BoardBase<BoardBaseState> <<abstract>> extends Observer {
  {field} + {static} SIZE = 8 : Number {readOnly}

  {method} + reset()
  {method} + getLastRow(color: PieceColor): Number
  {method} + getAymonInitialRow(color: PieceColor): Number
  {method} + getHubrisInitialRow(color: PieceColor): Number
  {method} + getEgoPiecePosition(color: PieceColor): PiecePosition
  {method} + getPiecePosition(position: Position): PiecePosition
  {method} - setupPieces(board: PiecePosition[64], color: PieceColor)
  {method} + getLastMove(): Move
  {method} + setLastMoveIsNextPlayerTurn()
}
BoardBase ..> BoardBaseState : <<Uses>>
BoardBase ..> Position : <<Uses>>
BoardBase ..> PieceColor : <<Uses>>

class Board extends BoardBase {
  {method} + Board()
  {method} - getAvailablePiecePositionsWithoutHubrisAttraction(fromPosition: Position): PiecePosition[*]
  {method} + getAvailablePiecePositions(fromPosition: Position): PiecePosition[*]
  {method} + canMove(fromPosition: Position, toPosition: Position): Boolean
  {method} + isCaptureMove(fromPosition: Position, toPosition: Position): Boolean
  {method} - canBounceBorder(fromPosition: Position, toPosition: Position): Boolean
  {method} - canBounceAymon(fromPosition: Position, toPosition: Position): Boolean
  {method} + move(fromPosition: Position, toPosition: Position): Move
  {method} + isReconquest(color: PieceColor): Boolean
  {method} - isReconquestAfterMove(fromPosition: Position, toPosition: Position): Boolean
  {method} + isCheck(color: PieceColor): Boolean
  {method} - isCheckAfterMove(fromPosition: Position, toPosition: Position): Boolean
}
Board ..> Position : <<Uses>>
Board ..> PieceColor : <<Uses>>
Board ..> PieceType : <<Uses>>
Board ..> Move : <<Uses>>

interface Move <<interface>> {
  {field} + fromPosition: Position
  {field} + toPosition: Position
  {field} + capturedPiece: Piece?
  {field} + isNextPlayerTurn: Boolean
  {field} + piece: Piece
}

class Position {
  {field} + column: Number
  {field} + row: Number

  {method} + Position(column: Number, row: Number)
  {method} + add(position: Position)
  {method} + isInsideSquare(position: Position): boolean
  {method} - getOffsetDirection(offset: Number): Number
  {method} + getIntermediatePositions(position: Position): Position[*]
  {method} + equals(position: Unknown): boolean
  {method} + toString(): String
  {method} + fromString(positionString: String): Position {static}
}

class PiecePosition {
  {method} + PiecePosition(position: Position, piece: Piece)
  {method} + PiecePosition(position: Position)
  {method} + setPiece(piece: Piece)

  {method} + isOccupied(): Boolean
  {method} + isFree(): Boolean
  {method} + getPiece(): Piece
  {method} + getPosition(): Position
}
PiecePosition o--> "1\n- piece" Piece : <<Owns>>
PiecePosition o--> "1\n- position" Position : <<Is Located>>

abstract class Observer<S> <<abstract>> {
  {field} - internalState: S
  {field} - listeners: Listener<S>[]

  {method} + <<Create>> Observer(initialState: S)
  {method} + getInitialState(): S
  {method} + getState(): S
  {method} + setState(state: S)
  {method} + getState(): S
  {method} + subscribe(listener: Listener<S>)
  {method} + unsubscribe(listener: Listener<S>)
  {method} - notifyListeners()
}

@enduml
